# llm_evaluation

./: .env.example  .gitignore  AGENTS.md  LICENSE.txt  QUICKSTART.md  README.md  TODO.md  app.py  deno.json  docs-template.lock.json  judge_system_prompt.md  launcher.py  main.py  package-lock.json  pyproject.toml  server.py  temp.json  temp.md
.claude/: settings.json
.codex/: hooks.json
.opencode/: opencode.jsonc  package.json
_docs/: documentation_guide.md
adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  lmstudio_adapter.py  openai_adapter.py  openai_compatible_adapter.py  openrouter_adapter.py
core/: __init__.py  active_run_registry.py  app_paths.py  benchmark_engine.py  cost_estimator.py  grounding_corpus.py  json_parser.py  judge_reliability.py  logging_utils.py  model_catalog.py  model_parameter_support.py  openrouter_admin.py  pricing_tables.py  progress_eta.py  provider_config_store.py  provider_rate_limiter.py  provider_registry.py  rate_limit_store.py  result_aggregator.py  result_storage.py  secrets_store.py  selection_store.py  strict_mode.py  tool_runtime.py
frontend/: index.html  package-lock.json  package.json
models/: models.json
packaging/: llm-benchmark.spec
prompts/: 02.md  03.md  05.md  06.md  07.md  08.md  09.md  10.md
results/: 20260218_093535_openrouter_qwen_qwen3_5-plus-02-15.json  20260218_100152_openrouter_qwen_qwen3_5-plus-02-15.json  20260218_101847_openrouter_qwen_qwen3_5-plus-02-15.json  20260218_103039_openrouter_qwen_qwen3_5-plus-02-15.json  20260218_104809_openrouter_moonshotai_kimi-k2_5.json  (+5 more)
(+340 files in other folders)
