[project]
name = "llm-evalution"
version = "0.1.0"
description = "LLM Benchmark Application with LLM-as-a-Judge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.55.0",
    "anthropic>=0.42.0",
    "google-genai>=0.6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
packages = ["adapters", "core"]
